# dmax

./: .gitattributes  .gitignore  CONTRIBUTING.rst  README.rst  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
docs/source/: api.rst  conf.py  index.rst
src/dmax/: __init__.py  _version.py  auth.py  bss.py  client.py  context.py  data_archive.py  data_storage.py  processing.py  scheduling.py  testing.py
tests/: test_bss.py  test_client.py  test_data_archive.py  test_data_storage.py  test_processing.py  test_scheduling.py
