[project]
name = "dmax"
version = "0.0.0"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "dmax"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
]
keywords = []
dependencies = ["httpx", "stamina", "pydantic", "typing_extensions"]

[dependency-groups]
dev = ["pytest", "pytest-httpx", "pytest-asyncio", "black", "ruff", "isort", "mypy", ]

[project.urls]
Homepage = "https://github.com/spc-group/dmax"

[project.scripts]
# command = "dmax.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/"]
follow_imports = "skip"
follow_untyped_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dmax = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
test-all = [
    {task = "lint" },
    {task = "format", args = ["--check"] },
    {task = "sort-imports", args = ["--check"] },
    {task = "check-types" },
    {task = "tests" },
]
lint-all = [
    {task = "lint", args = ["--fix"]},
    {task = "format"},
    {task = "sort-imports"},
]
check-types = "mypy"
make-docs = "make html --directory=docs/"
tests = "pytest -Werror -v"

[tool.pixi.feature.dev.tasks.lint]
args = [
     { arg = "fix", default = "" },
]
cmd = "ruff check {{ fix }}"

[tool.pixi.feature.dev.tasks.sort-imports]
args = [
     { arg = "check_flag", default = "" },
]
cmd = "isort src/ tests/ {{ check_flag }}"

[tool.pixi.feature.dev.tasks.format]
args = [
     { arg = "check_flag", default = "" },
]
cmd = "black src/ tests/ {{ check_flag }}"
