[project]
name = "dmax"
version = "0.0.5"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "dmax"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
]
keywords = []
dependencies = ["httpx", "stamina", "pydantic", "typing_extensions"]

[dependency-groups]
dev = ["pytest", "pytest-httpx", "pytest-asyncio", "black", "ruff", "isort", "mypy", "twine"]

[project.urls]
Homepage = "https://github.com/spc-group/dmax"

[project.scripts]
# command = "dmax.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/"]
follow_imports = "skip"
follow_untyped_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]

[tool.pixi.dependencies]
python = ">=3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dmax = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
py310 = { features = ["py310", "dev"]}
py311 = { features = ["py311", "dev"]}
py312 = { features = ["py312", "dev"]}
py313 = { features = ["py313", "dev"]}
py314 = { features = ["py314", "dev"]}

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
test-all = [
    {task = "lint" },
    {task = "format", args = ["--check"] },
    {task = "sort-imports", args = ["--check"] },
    {task = "check-types" },
    {task = "tests" },
]
lint-all = [
    {task = "lint", args = ["--fix"]},
    {task = "format"},
    {task = "sort-imports"},
]
check-types = "mypy"
make-docs = "make html --directory=docs/"
tests = "pytest -Werror -v"

[tool.pixi.feature.dev.tasks.lint]
args = [
     { arg = "fix", default = "" },
]
cmd = "ruff check {{ fix }}"

[tool.pixi.feature.dev.tasks.sort-imports]
args = [
     { arg = "check_flag", default = "" },
]
cmd = "isort src/ tests/ {{ check_flag }}"

[tool.pixi.feature.dev.tasks.format]
args = [
     { arg = "check_flag", default = "" },
]
cmd = "black src/ tests/ {{ check_flag }} --preview"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"

[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"

[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"

[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
